<resources>
    <string name="app_name">Where to Eat</string>
    <string name="app_name2">  Where to Eat</string>
    <string name="action_settings">Settings</string>
    <string name="randomizer_title">Restaurant Randomizer</string>
    <string name="tap_to_stop">Tap to Stop</string>
    <string name="add_restaurant">Add a Restaurant</string>
    <string name="view_all">View All Restaurants</string>
    <string name="title_activity_list">List of Restaurants</string>
    <string name="title_activity_randomize">RandomizeActivity</string>
    <string name="msg_randomize">Randomize</string>
    <string name="select">Seelct from categories</string>
</resources>
